# windgen-simulator

./: .gitignore  LICENSE  README.md  README.pt-BR.md  app.py  pyproject.toml  requirements.txt
config/: default.json
docs/: BENCH_TEST_1.pt-BR.md  BENCH_TEST_2.pt-BR.md  BENCH_TEST_2_PLAN.pt-BR.md  BENCH_TEST_3.pt-BR.md  BENCH_TEST_4.pt-BR.md  BENCH_TEST_5.pt-BR.md  BENCH_TEST_TOMORROW.pt-BR.md  RESULTS_AND_OBSERVATIONS.pt-BR.md  RPM_SPEEDYBEE.pt-BR.md  architecture.md  hardware.md  implementation_plan.md  roadmap.md  technical.md
docs/en/: architecture.md  hardware.md  implementation_plan.md  roadmap.md  technical.md
scripts/: bench_test.py  bench_test_1.py  bench_test_2.py  bench_test_3.py  bench_test_4.py  bench_test_5.py  emergency_stop.py  train_model.py
src/labo_gerador_de_ventos/: __init__.py  bench_app.py  cli.py  config.py  io.py  prompt.py  service.py  simulation.py  visualization.py
src/labo_gerador_de_ventos/control/: __init__.py  actuator.py  feedback.py  neural_array.py  neural_command.py  profiles.py  ramp.py  stop_signal.py  terminal_stop.py
src/labo_gerador_de_ventos/models/: __init__.py  mlp.py  weibull.py
src/labo_gerador_de_ventos/sensors/: __init__.py  wind.py
tests/: test_bench_app.py  test_mlp.py  test_msp.py  test_neural_array.py  test_neural_command.py  test_profiles.py  test_prompt.py  test_safety.py  test_simulation.py  test_stop_ramp.py  test_stop_signal.py  test_terminal_stop.py  test_weibull.py  test_wind_feedback.py
