[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-offshore-wind-lab"
version = "0.1.0"
description = "Intelligent wind-generation research platform for offshore scenarios"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "LABO Gerador de Ventos"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "matplotlib>=3.8,<4",
  "streamlit>=1.36,<2",
  "pyserial>=3.5,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.5,<1"]

[project.scripts]
neural-wind-lab = "labo_gerador_de_ventos.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
